# cs242

./: AUTHORS  COPYING  ChangeLog  README.md  configure.ac
data/: Makefile.am  config  make_data_files.py
example/: config  southbay_sfcvm.conf  southbay_sfcvm.out  steps
src/: Makefile.am  cs242.c  cs242.h  latlon2utm.c
